Fix alignment on text page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -163,6 +163,7 @@ div.section {
     line-height: 2;
     position: relative;
     padding-left: 30px;
+    margin-left: -10px;
     span.line {
       position: absolute;
       left: -15px;
